--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=user-service
 
-server.port=8083
+server.port=${PORT:8080}
 
-spring.datasource.url=jdbc:mysql://localhost:3306/user_service
-spring.datasource.username=root
-spring.datasource.password=1234
+# Usa variables de entorno para la base de datos (se llenan solas en Railway)
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
