--- a/comments-service/src/main/resources/application.properties
+++ b/comments-service/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/comments_service
 spring.datasource.username=root
 spring.datasource.password=1234
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
