--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=user-service
 
-server.port=${PORT:8080}
+server.port=8083
 
 # Usa variables de entorno para la base de datos (se llenan solas en Railway)
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=jdbc:mysql://localhost:3306/user_service
+spring.datasource.username=root
+spring.datasource.password=1234
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
